# PokeCoach

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  run_report.py
.github/workflows/: ci.yml
docs/: adr_cli_framework.md  release_checklist_phase5.md  spec_v1.md
docs/prd/: PRD-012-agentic-coach-auditor-contract.md  PRD-012-test-checklist.md  PRD-013-auditor-violations-taxonomy.md  PRD-014-rollout-and-metrics.md  PRD-015-llm-agent-integration.md  PROMPT-002-auditor-redteam.md  PYDANTICAI-IMPLEMENTATION-NOTES.md  TODO-agent-a-fallback.md
examples/: pydanticai_poc.py
scripts/: check_release_kpis.py
src/pokecoach/: __init__.py  coach_auditor.py  constants.py  factories.py  guardrails.py  llm_provider.py  quality_kpis.py  report.py  schemas.py  summary_integrity.py  tools.py
src/pokecoach/events/: __init__.py  registry.py
tests/: test_architecture_contracts.py  test_cli.py  test_coach_auditor.py  test_compute_basic_stats.py  test_find_key_events.py  test_golden_ambiguous_compound.py  test_golden_minimums.py  test_index_turns.py  test_llm_provider.py  test_match_facts.py  test_play_bundles.py  test_release_kpis.py  test_report_guardrails.py  test_report_pipeline.py  test_schemas.py
tests/golden/: expected_minimums.json
tests/golden/fixtures/: ambiguous_turns_interturn_block.txt  compound_single_line_events.txt
